Prepare for release

--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -1,4 +1,4 @@
-# This is the configuration file for DOSBox-X 2025.10.07. (Please use the latest version of DOSBox-X)
+# This is the configuration file for DOSBox-X 2025.12.01. (Please use the latest version of DOSBox-X)
 # Lines starting with a # are comment lines and are ignored by DOSBox-X.
 # They are used to (briefly) document the effect of each option.
 # To write out ALL options, use command 'config -all' with -wc or -writeconf options.
@@ -719,6 +719,7 @@ monochrome_pal          = green
 #DOSBOX-X-ADV:#       pc-98 chargen vsync-limited access: If set, reading pixels from the character generator while in Code Access mode (or always, for ANK
 #DOSBOX-X-ADV:#                                             characters) will be invalid. Some models (i.e. PC-9821As3) dont seem to have this limitation, but
 #DOSBOX-X-ADV:#                                             many others do.
+#DOSBOX-X-ADV:#                                             Try enabling this if you suffer some glitches in text display.
 #DOSBOX-X-ADV-SEE:#
 #DOSBOX-X-ADV-SEE:# Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
 #DOSBOX-X-ADV-SEE:# -> pc-98 int 1b fdc timer wait; pc-98 pic init to read isr; pc-98 fm board irq; pc-98 fm board io port; pc-98 time stamp; pc-98 sound bios; pc-98 load sound bios rom file; pc-98 buffer page flip; pc-98 enable 256-color planar; pc-98 enable 188 user cg; pc-98 start gdc at 5mhz; pc-98 allow scanline effect; pc-98 nec mouse function; pc-98 video mode; pc-98 timer always cycles; pc-98 timer master frequency; pc-98 allow 4 display partition graphics; pc-98 fontx sbcs; pc-98 fontx dbcs; pc-98 fontx internal symbol; pc-98 show graphics layer on initialize; pc-98 chargen vsync-limited access
@@ -755,7 +756,7 @@ pc-98 anex86 font                        =
 #DOSBOX-X-ADV:pc-98 fontx dbcs                         = 
 #DOSBOX-X-ADV:pc-98 fontx internal symbol              = false
 #DOSBOX-X-ADV:pc-98 show graphics layer on initialize  = true
-#DOSBOX-X-ADV:pc-98 chargen vsync-limited access       = true
+#DOSBOX-X-ADV:pc-98 chargen vsync-limited access       = false
 
 [dosv]
 #             dosv: Enable DOS/V emulation and specify which version to emulate. This option is intended for use with games or software
