--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -1,4 +1,4 @@
-# This is the configuration file for DOSBox-X 2025.10.07. (Please use the latest version of DOSBox-X)
+# This is the configuration file for DOSBox-X 2025.12.01. (Please use the latest version of DOSBox-X)
 # Lines starting with a # are comment lines and are ignored by DOSBox-X.
 # They are used to (briefly) document the effect of each option.
 # To write out ALL options, use command 'config -all' with -wc or -writeconf options.
@@ -702,7 +702,8 @@ monochrome_pal          = green
 #                                             enabled. To emulate other drivers like QMOUSE that do not follow this behavior, set to false.
 #       pc-98 chargen vsync-limited access: If set, reading pixels from the character generator while in Code Access mode (or always, for ANK
 #                                             characters) will be invalid. Some models (i.e. PC-9821As3) dont seem to have this limitation, but
-#                                             many others do. Try enabling this if you suffer some glitches in text display.
+#                                             many others do.
+#                                             Try enabling this if you suffer some glitches in text display.
 pc-98 BIOS copyright string              = false
 pc-98 int 1b fdc timer wait              = false
 pc-98 pic init to read isr               = true
