Revise explanation of pc-98 chargen vsync-limited access option.

--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -703,7 +703,9 @@ monochrome_pal          = green
 #       pc-98 chargen vsync-limited access: If set, reading pixels from the character generator while in Code Access mode (or always, for ANK
 #                                             characters) will be invalid. Some models (i.e. PC-9821As3) dont seem to have this limitation, but
 #                                             many others do.
-#                                             Try enabling this if you suffer some glitches in text display.
+#                                             This option is set to false by default, set this option to true if you suffer text glitches.
+#                                             It is reported that setting this option to true will result in glitches in some titles;
+#                                             therefore revert this option to false in such cases.
 pc-98 BIOS copyright string              = false
 pc-98 int 1b fdc timer wait              = false
 pc-98 pic init to read isr               = true
