SDL2_net: Fix build scripts to build static libraries

--- a/vs/sdl2net/Makefile.am
+++ b/vs/sdl2net/Makefile.am
@@ -1,64 +1,53 @@
-# Makefile.am for the SDL portable network library
 ACLOCAL_AMFLAGS = -I acinclude
 AUTOMAKE_OPTIONS= foreign
 
-lib_LTLIBRARIES = libSDL2_net.la
+# Build static library only
+lib_LIBRARIES = libSDL2_net.a
 
 libSDL2_netincludedir = $(includedir)/SDL2
-libSDL2_netinclude_HEADERS =		\
-	SDL_net.h
+libSDL2_netinclude_HEADERS = SDL_net.h
 
-libSDL2_net_la_SOURCES =		\
-	SDLnet.c		\
-	SDLnetTCP.c		\
-	SDLnetUDP.c		\
-	SDLnetselect.c		\
+libSDL2_net_a_SOURCES = \
+	SDLnet.c \
+	SDLnetTCP.c \
+	SDLnetUDP.c \
+	SDLnetselect.c \
 	SDLnetsys.h
 
 EXTRA_DIST = \
-	Android.mk		\
-	CHANGES.txt 		\
-	CMakeLists.txt		\
-	LICENSE.txt 		\
-	Makefile.os2		\
-	README.txt 		\
-	SDL2_net.spec		\
-	SDL2_netConfig.cmake.in	\
-	VisualC			\
-	Xcode			\
-	autogen.sh		\
-	cmake			\
-	mingw			\
+	Android.mk \
+	CHANGES.txt \
+	CMakeLists.txt \
+	LICENSE.txt \
+	Makefile.os2 \
+	README.txt \
+	SDL2_net.spec \
+	SDL2_netConfig.cmake.in \
+	VisualC \
+	Xcode \
+	autogen.sh \
+	cmake \
+	mingw \
 	version.rc
 
-libSDL2_net_la_LDFLAGS = 	\
-	-no-undefined		\
-	-release $(LT_RELEASE)	\
-	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LT_EXTRA)
-libSDL2_net_la_LIBADD = @INETLIB@
-if USE_VERSION_RC
-libSDL2_net_la_DEPENDENCIES = version.o
-endif
+# Noinst programs (examples)
+noinst_PROGRAMS = showinterfaces chat chatd
+
+showinterfaces_SOURCES = showinterfaces.c
+showinterfaces_LDADD = libSDL2_net.a
+
+chat_SOURCES = chat.c chat.h
+chat_LDADD = libSDL2_net.a -lSDL2_test
+
+chatd_SOURCES = chatd.c
+chatd_LDADD = libSDL2_net.a
 
 .rc.o:
 	$(RC) $< $@
 
-if ENABLE_EXAMPLES
-EXAMPLES = showinterfaces chat chatd
-noinst_PROGRAMS = $(EXAMPLES)
-endif
-
-showinterfaces_SOURCES = showinterfaces.c
-showinterfaces_LDADD = libSDL2_net.la
-chat_SOURCES = chat.c chat.h
-chat_LDADD = libSDL2_net.la -lSDL2_test
-chatd_SOURCES = chatd.c
-chatd_LDADD = libSDL2_net.la
-
-# Rule to build tar-gzipped distribution package
+# Distribution rules
 $(PACKAGE)-$(VERSION).tar.gz: distcheck
 
-# Rule to build RPM distribution package
 rpm: $(PACKAGE)-$(VERSION).tar.gz
 	rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
 
@@ -71,6 +60,6 @@ install-data-local:
 	$(INSTALL) -m 644 sdl2_net-config-version.cmake $(DESTDIR)$(libdir)/cmake/SDL2_net
 
 uninstall-hook:
-	rm $(DESTDIR)$(libdir)/cmake/SDL2_net/sdl2_net-config.cmake
-	rm $(DESTDIR)$(libdir)/cmake/SDL2_net/sdl2_net-config-version.cmake
-	rm -r $(DESTDIR)$(libdir)/cmake/SDL2_net
+	rm -f $(DESTDIR)$(libdir)/cmake/SDL2_net/sdl2_net-config.cmake
+	rm -f $(DESTDIR)$(libdir)/cmake/SDL2_net/sdl2_net-config-version.cmake
+	rmdir --ignore-fail-on-non-empty $(DESTDIR)$(libdir)/cmake/SDL2_net
