Render on demand + wait for changes: Let changes to the Attribute Controller also trigger redraw. This fixes EGA AC palette animation issues in Commander Keen games and Cosmo's Cosmic Adventures, though I still have yet to figure out what about Wait For Changes is causing Cosmo's irregular frame rate

--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -250,7 +250,7 @@ debuggerrun = debugger
 #                                          weitek: If set, emulate the Weitek coprocessor. This option only has effect if cputype=386 or cputype=486.
 #                             bochs debug port e9: If set, emulate Bochs debug port E9h. ASCII text written to this I/O port is assumed to be debug output, and logged.
 #                                         machine: The type of machine DOSBox-X tries to emulate.
-#                                                    Possible values: mda, cga, cga_mono, cga_rgb, cga_composite, cga_composite2, hercules, hercules_plus, hercules_incolor, hercules_color, tandy, pcjr, pcjr_composite, pcjr_composite2, amstrad, ega, ega200, jega, mcga, vgaonly, svga_s3, svga_s386c928, svga_s3vision864, svga_s3vision868, svga_s3vision964, svga_s3vision968, svga_s3trio32, svga_s3trio64, svga_s3trio64v+, svga_s3virge, svga_s3virgevx, svga_et3000, svga_et4000, svga_paradise, vesa_nolfb, vesa_oldvbe, vesa_oldvbe10, pc98, pc9801, pc9821, svga_ati_egavgawonder, svga_ati_vgawonder, svga_ati_vgawonderplus, svga_ati_vgawonderxl, svga_ati_vgawonderxl24, svga_ati_mach8, svga_ati_mach32, svga_ati_mach64, fm_towns.
+#                                                    Possible values: mda, cga, cga_mono, cga_rgb, cga_composite, cga_composite2, hercules, hercules_plus, hercules_incolor, hercules_color, tandy, pcjr, pcjr_composite, pcjr_composite2, amstrad, ega, ega200, jega, mcga, vgaonly, svga_s3, svga_s386c928, svga_s3vision864, svga_s3vision868, svga_s3vision964, svga_s3vision968, svga_s3trio32, svga_s3trio64, svga_s3trio64v+, svga_s3virge, svga_s3virgevx, svga_et3000, svga_et4000, svga_paradise, vesa_nolfb, vesa_oldvbe, vesa_oldvbe10, pc98, pc9801, pc9821, svga_ati_egavgawonder, svga_ati_vgawonder, svga_ati_vgawonderplus, svga_ati_vgawonderxl, svga_ati_vgawonderxl24, svga_ati_mach8, svga_ati_mach32, svga_ati_mach64, svga_dosbox, fm_towns.
 #                                        captures: Directory where things like wave, midi, screenshot get captured.
 #                                        autosave: Enable the auto-save state feature. Specify a time interval in seconds, and optionally a save slot or start and end save slots.
 #                                                    For example, "autosave=10 11-20" will set a 10-second time interval for auto-saving, and the save slots used will be between 11 and 20.
@@ -704,8 +704,7 @@ monochrome_pal          = green
 #                                             characters) will be invalid. Some models (i.e. PC-9821As3) dont seem to have this limitation, but
 #                                             many others do.
 #                                             This option is set to false by default, set this option to true if you suffer text glitches.
-#                                             It is reported that setting this option to true will result in glitches in some titles;
-#                                             therefore revert this option to false in such cases.
+#                                             It is reported that setting this option to true will result in glitches in some titles;therefore revert this option to false in such cases.
 pc-98 BIOS copyright string              = false
 pc-98 int 1b fdc timer wait              = false
 pc-98 pic init to read isr               = true
@@ -1022,9 +1021,15 @@ j3100textcolor   =
 #                                                      This should not be set except for DOS games with bugs in their display handling code.
 #                          memory io optimization 1: Enable one class of EGA/VGA memory I/O optimizations. Default ON (true).
 #                                                      If graphical artifacts or errors occur, try turning this off first. May provide a performance benefit.
+#                    skip render if nothing changed: If set, DOSBox-X will skip rendering entirely unless any change is made to the guest display.
+#                                                      This may provide a performance benefit, especially in SVGA modes. This option has no effect unless render on demand is true or auto.
+#                                                      Normally in DOSBox and DOSBox-X, video is rendered constantly, whether or not anything changed,
+#                                                      and then compared with the previous frame to determine where to update the host display.
+#                                                      In addition to the render on demand option, this option may further break timing dependent effects and/or cause problems with some games.
+#                                                      Possible values: true, false, 1, 0, auto.
 #                         scanline render on demand: Render video output at vsync or when something is changed mid frame, instead of stopping to render every scanline.
-#                                                      May provide a performance benefit to most DOS games. However this may also break timing-dependent game or Demoscene effects.
-#                                                      Default auto, which will turn if off for VGA modes and turn it on for SVGA modes.
+#                                                      This may provide a performance benefit to most DOS games. However this may also break timing-dependent game or Demoscene effects.
+#                                                      Default is auto, which will turn it off for VGA modes and turn it on for SVGA modes.
 #                                                      Possible values: true, false, 1, 0, auto.
 int 10h use video parameter table                 = auto
 vmemdelay                                         = 0
@@ -1096,6 +1101,7 @@ vga palette update on full load                   = true
 ignore odd-even mode in non-cga modes             = false
 ignore sequencer blanking                         = false
 memory io optimization 1                          = true
+skip render if nothing changed                    = auto
 scanline render on demand                         = auto
 
 [vsync]
