update ref conf

--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -830,6 +830,11 @@ j3100textcolor   =
 #                                                      
 #                                                      This option may be useful if you would like to prevent your DOS gaming from appearing in the Windows 11 Recall feature
 #                                                      Possible values: , none, blank, invisible.
+#                                        vbememsize: Amount of video memory in kilobytes to report through the VESA BIOS extensions.
+#                                                      Set this value to an amount lower than vmemsize to handle DOS programs that cannot handle
+#                                                      more than the small amount of video memory they were designed for. This option also affects
+#                                                      what video modes are reported through the VBE.
+#                                      vbememsizekb: Amount of video memory to report in kilobytes, in addition to vbememsize.
 #                                          vmemsize: Amount of video memory in megabytes.
 #                                                        The maximum resolution and color depth the svga_s3 will be able to display
 #                                                        is determined by this value.
@@ -839,12 +844,14 @@ j3100textcolor   =
 #                                                        2: 1600x1200 at 256 colors or 1024x768 at 64k colors or 640x480 at 16M colors
 #                                                        4: 1600x1200 at 64k colors or 1024x768 at 16M colors
 #                                                        8: up to 1600x1200 at 16M colors
+#                                                      Larger values are available depending on machine type.
 #                                                      For build engine games, use more memory than in the list above so it can
 #                                                      use triple buffering and thus won't flicker.
 #                                                      
 #                                        vmemsizekb: Amount of video memory in kilobytes, in addition to vmemsize.
 #                            vbe window granularity: Controls VESA BIOS non-linear framebuffer window granularity in KB. This affects ONLY the VESA BIOS extensions. Set 0 to functional normally.
 #                                   vbe window size: Controls VESA BIOS non-linear framebuffer window size in KB. This affects ONLY the VESA BIOS extensions. Set 0 to functional normally.
+#                      vbe protected mode interface: If set, enable the VBE protected mode interface
 #                                  enable 8-bit dac: If set, allow VESA BIOS calls in IBM PC mode to set DAC width. Has no effect in PC-98 mode.
 #                           high intensity blinking: Set to false if you want to see high-intensity background colors instead of blinking foreground text.
 #                                                      This option has no effect in PC-98 and some other video modes.
@@ -1035,10 +1042,13 @@ int 10h use video parameter table                 = auto
 vmemdelay                                         = 0
 lfb vmemdelay                                     = false
 prevent capture                                   = 
+vbememsize                                        = 0
+vbememsizekb                                      = 0
 vmemsize                                          = -1
 vmemsizekb                                        = 0
 vbe window granularity                            = 0
 vbe window size                                   = 0
+vbe protected mode interface                      = true
 enable 8-bit dac                                  = true
 high intensity blinking                           = true
 svga lfb base                                     = 0
@@ -1729,7 +1739,7 @@ cms                                              = auto
 oplmode                                          = auto
 adlib force timer overflow on detect             = false
 oplemu                                           = default
-oplrate                                          = 48000
+oplrate                                          = 49716
 oplport                                          = 
 retrowave_bus                                    = serial
 retrowave_spi_cs                                 = 0,6
@@ -1892,7 +1902,7 @@ cms                                              = off
 oplmode                                          = none
 adlib force timer overflow on detect             = false
 oplemu                                           = default
-oplrate                                          = 48000
+oplrate                                          = 49716
 oplport                                          = 
 retrowave_bus                                    = serial
 retrowave_spi_cs                                 = 0,6
