--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -854,6 +854,11 @@ j3100colorscroll = false
 #DOSBOX-X-ADV:#                                                      
 #DOSBOX-X-ADV:#                                                      This option may be useful if you would like to prevent your DOS gaming from appearing in the Windows 11 Recall feature
 #DOSBOX-X-ADV:#                                                      Possible values: , none, blank, invisible.
+#                                        vbememsize: Amount of video memory in kilobytes to report through the VESA BIOS extensions.
+#                                                      Set this value to an amount lower than vmemsize to handle DOS programs that cannot handle
+#                                                      more than the small amount of video memory they were designed for. This option also affects
+#                                                      what video modes are reported through the VBE.
+#                                      vbememsizekb: Amount of video memory to report in kilobytes, in addition to vbememsize.
 #                                          vmemsize: Amount of video memory in megabytes.
 #                                                        The maximum resolution and color depth the svga_s3 will be able to display
 #                                                        is determined by this value.
@@ -863,12 +868,14 @@ j3100colorscroll = false
 #                                                        2: 1600x1200 at 256 colors or 1024x768 at 64k colors or 640x480 at 16M colors
 #                                                        4: 1600x1200 at 64k colors or 1024x768 at 16M colors
 #                                                        8: up to 1600x1200 at 16M colors
+#                                                      Larger values are available depending on machine type.
 #                                                      For build engine games, use more memory than in the list above so it can
 #                                                      use triple buffering and thus won't flicker.
 #                                                      
 #                                        vmemsizekb: Amount of video memory in kilobytes, in addition to vmemsize.
 #DOSBOX-X-ADV:#                            vbe window granularity: Controls VESA BIOS non-linear framebuffer window granularity in KB. This affects ONLY the VESA BIOS extensions. Set 0 to functional normally.
 #DOSBOX-X-ADV:#                                   vbe window size: Controls VESA BIOS non-linear framebuffer window size in KB. This affects ONLY the VESA BIOS extensions. Set 0 to functional normally.
+#DOSBOX-X-ADV:#                      vbe protected mode interface: If set, enable the VBE protected mode interface
 #DOSBOX-X-ADV:#                                  enable 8-bit dac: If set, allow VESA BIOS calls in IBM PC mode to set DAC width. Has no effect in PC-98 mode.
 #                           high intensity blinking: Set to false if you want to see high-intensity background colors instead of blinking foreground text.
 #                                                      This option has no effect in PC-98 and some other video modes.
@@ -1057,16 +1064,19 @@ j3100colorscroll = false
 #                                                      Possible values: true, false, 1, 0, auto.
 #DOSBOX-X-ADV-SEE:#
 #DOSBOX-X-ADV-SEE:# Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-#DOSBOX-X-ADV-SEE:# -> int 10h use video parameter table; vmemdelay; lfb vmemdelay; prevent capture; vbe window granularity; vbe window size; enable 8-bit dac; svga lfb base; pci vga; vga attribute controller mapping; enable supermegazeux tweakmode; vga bios use rom image; vga bios rom image; vga bios size override; video bios dont duplicate cga first half rom font; video bios always offer 14-pixel high rom font; video bios always offer 16-pixel high rom font; video bios enable cga second half rom font; forcerate; sierra ramdac; sierra ramdac lock 565; vga fill active memory; page flip debug line; vertical retrace poll debug line; cgasnow; vga 3da undefined bits; rom bios 8x8 CGA font; rom bios video parameter table; int 10h points at vga bios; unmask timer on int 10 setmode; vesa bank switching window mirroring; vesa bank switching window range check; vesa zero buffer on get information; vesa set display vsync; vesa lfb base scanline adjust; vesa lfb pel scanline adjust; vesa map non-lfb modes to 128kb region; ega per scanline hpel; allow hpel effects; allow hretrace effects; hretrace effect weight; vesa modelist cap; vesa modelist width limit; vesa modelist height limit; vesa vbe put modelist in vesa information; vesa vbe 1.2 modes are 32bpp; allow low resolution vesa modes; allow explicit 24bpp vesa modes; allow high definition vesa modes; allow unusual vesa modes; allow 32bpp vesa modes; allow 24bpp vesa modes; allow 16bpp vesa modes; allow 15bpp vesa modes; allow 8bpp vesa modes; allow 4bpp vesa modes; allow 4bpp packed vesa modes; allow tty vesa modes; double-buffered line compare; ignore vblank wraparound; ignore extended memory bit; enable vga resize delay; resize only on vga active display width increase; vga palette update on full load; ignore odd-even mode in non-cga modes; ignore sequencer blanking
+#DOSBOX-X-ADV-SEE:# -> int 10h use video parameter table; vmemdelay; lfb vmemdelay; prevent capture; vbe window granularity; vbe window size; vbe protected mode interface; enable 8-bit dac; svga lfb base; pci vga; vga attribute controller mapping; enable supermegazeux tweakmode; vga bios use rom image; vga bios rom image; vga bios size override; video bios dont duplicate cga first half rom font; video bios always offer 14-pixel high rom font; video bios always offer 16-pixel high rom font; video bios enable cga second half rom font; forcerate; sierra ramdac; sierra ramdac lock 565; vga fill active memory; page flip debug line; vertical retrace poll debug line; cgasnow; vga 3da undefined bits; rom bios 8x8 CGA font; rom bios video parameter table; int 10h points at vga bios; unmask timer on int 10 setmode; vesa bank switching window mirroring; vesa bank switching window range check; vesa zero buffer on get information; vesa set display vsync; vesa lfb base scanline adjust; vesa lfb pel scanline adjust; vesa map non-lfb modes to 128kb region; ega per scanline hpel; allow hpel effects; allow hretrace effects; hretrace effect weight; vesa modelist cap; vesa modelist width limit; vesa modelist height limit; vesa vbe put modelist in vesa information; vesa vbe 1.2 modes are 32bpp; allow low resolution vesa modes; allow explicit 24bpp vesa modes; allow high definition vesa modes; allow unusual vesa modes; allow 32bpp vesa modes; allow 24bpp vesa modes; allow 16bpp vesa modes; allow 15bpp vesa modes; allow 8bpp vesa modes; allow 4bpp vesa modes; allow 4bpp packed vesa modes; allow tty vesa modes; double-buffered line compare; ignore vblank wraparound; ignore extended memory bit; enable vga resize delay; resize only on vga active display width increase; vga palette update on full load; ignore odd-even mode in non-cga modes; ignore sequencer blanking
 #DOSBOX-X-ADV-SEE:#
 #DOSBOX-X-ADV:int 10h use video parameter table                 = auto
 #DOSBOX-X-ADV:vmemdelay                                         = 0
 #DOSBOX-X-ADV:lfb vmemdelay                                     = false
 #DOSBOX-X-ADV:prevent capture                                   = 
+vbememsize                                        = 0
+vbememsizekb                                      = 0
 vmemsize                                          = -1
 vmemsizekb                                        = 0
 #DOSBOX-X-ADV:vbe window granularity                            = 0
 #DOSBOX-X-ADV:vbe window size                                   = 0
+#DOSBOX-X-ADV:vbe protected mode interface                      = true
 #DOSBOX-X-ADV:enable 8-bit dac                                  = true
 high intensity blinking                           = true
 #DOSBOX-X-ADV:svga lfb base                                     = 0
@@ -1773,7 +1783,7 @@ sbmixer                                          = true
 oplmode                                          = auto
 #DOSBOX-X-ADV:adlib force timer overflow on detect             = false
 oplemu                                           = default
-oplrate                                          = 48000
+oplrate                                          = 49716
 oplport                                          = 
 retrowave_bus                                    = serial
 #DOSBOX-X-ADV:retrowave_spi_cs                                 = 0,6
@@ -1940,7 +1950,7 @@ sbmixer                                          = true
 oplmode                                          = none
 #DOSBOX-X-ADV:adlib force timer overflow on detect             = false
 oplemu                                           = default
-oplrate                                          = 48000
+oplrate                                          = 49716
 oplport                                          = 
 retrowave_bus                                    = serial
 #DOSBOX-X-ADV:retrowave_spi_cs                                 = 0,6
