--- a/vs/dosbox-x.vcxproj.filters
+++ b/vs/dosbox-x.vcxproj.filters
@@ -1668,6 +1668,9 @@
     <ClCompile Include="..\src\hardware\mic_input_win32.cpp">
       <Filter>Sources\hardware</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\output\output_direct3d11.cpp">
+      <Filter>Sources\output</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\aviwriter\avi.h">
@@ -2627,6 +2630,9 @@
     <ClInclude Include="..\src\libs\tinyfiledialogs\tinyfiledialogs.h" />
     <ClInclude Include="..\src\hardware\mic_input_win32.h">
       <Filter>Sources\hardware</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\output\output_direct3d11.h">
+      <Filter>Sources\output</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
